--- a/mangareader.ui
+++ b/mangareader.ui
@@ -135,7 +135,7 @@
         <pixmap>../../../Downloads/download.png</pixmap>
        </property>
        <property name="scaledContents">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </widget>
